// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render <UserAvatar /> with name, with custom component 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#1abc9c",
      },
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 50,
        "borderWidth": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 100,
        "justifyContent": "center",
        "marginTop": -5,
        "width": 100,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/__tests__/images/rn_logo.png",
        }
      }
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    />
  </View>
</View>
`;

exports[`should render <UserAvatar /> with name, with src 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#1abc9c",
      },
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 16,
        "borderWidth": 0,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 32,
        "justifyContent": "center",
        "marginTop": -1.6,
        "width": 32,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 12.8,
          },
          Object {},
        ]
      }
    >
      AB
    </Text>
  </View>
</View>
`;

exports[`should render <UserAvatar /> with name, without src, default values 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#1abc9c",
      },
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 16,
        "borderWidth": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 32,
        "justifyContent": "center",
        "marginTop": -1.6,
        "width": 32,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 12.8,
          },
          Object {},
        ]
      }
    >
      AB
    </Text>
  </View>
</View>
`;

exports[`should warn because size is not number 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#1abc9c",
      },
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 50,
        "borderWidth": 1,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "height": 100,
        "justifyContent": "center",
        "marginTop": -5,
        "width": 100,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        Array [
          Object {
            "color": "#fff",
            "fontSize": 40,
          },
          Object {},
        ]
      }
    >
      AB
    </Text>
  </View>
</View>
`;
